@@ -1100,6 +1100,7 @@ To find the latest change quickly, search ==== :)
 
 21/06/2002 (Jir)
 - item-enchanting spells can add to 'discount' (after Zz's proposal)
+- Receive_spell selects the function to call by the book (and not class).
 [B] admin char caused 'write error'.
 [H] 'p' key to scroll back when perusing a file.
 
